--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/zhenghaohe/Budgety/issues"
   },
-  "homepage": "https://github.com/zhenghaohe/Budgety#readme"
+  "homepage": "https://github.com/zhenghaohe/Budgety#readme",
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0"
+  }
 }
